# rts_prototype

./: Cargo.toml  README.md
assets/models/kx139/: scene.gltf
src/: bundles.rs  initialize.rs  main.rs
src/helpers/: font.rs  mod.rs  movement.rs  shapes.rs
src/systems/: ability.rs  aliens.rs  attack.rs  axes.rs  bullet.rs  camera.rs  debug.rs  drag_selection.rs  drone.rs  enemy.rs  faction.rs  health.rs  health_numbers.rs  mod.rs  movement.rs  selection.rs  selection_circle.rs  target_indicator.rs  time.rs  ui.rs  unit.rs  walker.rs
