[package]
name = "bevy_test"
version = "0.1.0"
authors = ["guimcaballero <guim@caballerocoll.com>"]
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_mod_picking = { git = "https://github.com/guimcaballero/bevy_mod_picking", branch = "world-position" }
bevy_contrib_colors = { git = "https://github.com/guimcaballero/bevy_contrib_colors", branch = "master" }
