[package]
name = "rts_prototype"
version = "0.1.0"
authors = ["guimcaballero <guim@caballerocoll.com>"]
edition = "2018"

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
bevy_mod_picking = { git = "https://github.com/guimcaballero/bevy_mod_picking", branch = "add-entity-to-pickintersection" }
bevy_contrib_colors = { git = "https://github.com/guimcaballero/bevy_contrib_colors", branch = "master" }

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy" }
